// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImagePlaceholder /> does not show placeholder image when image is loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    onLoad={[Function]}
    source={
      Object {
        "uri": "foo.com",
      }
    }
    style={
      Array [
        Object {
          "position": "absolute",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`<ImagePlaceholder /> shows placeholder image when image is not loaded 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Component
    onLoad={[Function]}
    source={
      Object {
        "uri": "foo.com",
      }
    }
    style={
      Array [
        Object {
          "position": "absolute",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
        },
        undefined,
      ]
    }
  >
    <Icon
      allowFontScaling={false}
      color="gray"
      name="image"
      size={12}
      style={
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "justifyContent": "center",
        }
      }
    />
  </View>
</View>
`;
